# wavemeter

./: .cursorrules  .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  compare_lock_performance.py  config.json  config_default.json  fast_wlm_core.py  hw_buffer_diagnostic.py  hw_switch_diagnostic.py  main.py  pyproject.toml  test_wlm_logic.py  wavemeter-bali.ipynb
docs/: CONTEXT.md  cursor_performance_optimization_and_ben.md
modules/: CSV-Saver.py  FiberSwitchCommunication.py  HighFinesse_dll.py  PID.py  PIDTestFunctions.py  TopticaLaserController.py  lock_client.py  lock_controller.py  lock_server.py  pc_health.py  pid_wrapper.py  plotter.py  udp_discover.py  udp_discover_secure.py  udp_discover_signed.py  usb_dao.py  wavelengthmeter.py  wavelengthmeter1.py
modules/static/: script.js
modules/static/css/: main.css
modules/templates/: index.html
